// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeployServiceEntityWidget - multi services tests user can delete selected service 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main formRow StyledProps--margin-bottom-medium StyledProps--flex StyledProps--flex-alignItems-flex-start StyledProps--flex-justifyContent-space-between"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-flex-start StyledProps--flex-justifyContent-flex-start"
          >
            <div
              class="serviceLabel"
            >
              <div
                class="StyledProps--font StyledProps--main"
                data-testid="serviceTooltip"
              >
                <span
                  class="Tooltip--acenter bp3-label"
                  data-tooltip-id="deployServiceStepForm_services"
                >
                  cd.pipelineSteps.serviceTab.specifyYourServices
                </span>
              </div>
              <div
                class="bp3-form-group"
                data-id="undefined-0"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                    style="width: 300px;"
                  >
                    <div
                      class="StyledProps--font StyledProps--main bp3-input placeholderContainer placeholderClass StyledProps--border StyledProps--padding-xsmall"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main layoutHeight pointer StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
                      >
                        <div
                          class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main groupedReferences StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
                        >
                          <div
                            class="StyledProps--font StyledProps--main StyledProps--padding-top-xsmall StyledProps--padding-right-small StyledProps--padding-bottom-xsmall StyledProps--padding-left-small StyledProps--background-primary2 StyledProps--border"
                          >
                            <div
                              class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-center"
                            >
                              <p
                                class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-size-small StyledProps--color StyledProps--color-black"
                                style="--text-line-clamp: 1;"
                              >
                                PROJECT
                              </p>
                              <p
                                class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--padding-left-xsmall StyledProps--padding-right-xsmall StyledProps--flex StyledProps--flex-align-center-center StyledProps--background-primary7 StyledProps--color StyledProps--color-white StyledProps--border"
                              >
                                2
                              </p>
                            </div>
                          </div>
                        </div>
                        <span
                          class="bp3-icon bp3-icon-cross StyledProps--main StyledProps--margin-left-medium StyledProps--color StyledProps--color-grey500"
                          icon="cross"
                        >
                          <svg
                            data-icon="cross"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              cross
                            </desc>
                            <path
                              d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                    <span
                      class="bp3-popover-wrapper MultiTypeInput--wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="MultiTypeInput--btn MultiTypeInput--FIXED"
                          data-testid="multi-type-button"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="fixed-input"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 9 9"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                fill="currentColor"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <button
              aria-label="cd.addService"
              class="bp3-button Button--button StyledProps--font StyledProps--main serviceActionWrapper Button--with-current-color Button--withLeftIcon Button--variation Button--variation-link Button--size Button--small"
              data-testid="add-new-service"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
                icon="plus"
              >
                <svg
                  data-icon="plus"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    plus
                  </desc>
                  <path
                    d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp3-button-text"
              >
                cd.addService
              </span>
            </button>
          </div>
          <label
            class="Toggle--toggle serviceActionWrapper StyledProps--main"
            data-tooltip-id="multiServiceToggle"
          >
            <input
              checked=""
              class="Toggle--input"
              type="checkbox"
              value=""
            />
            <span
              class="Toggle--toggleIcon"
            />
            cd.pipelineSteps.serviceTab.multiServicesText
          </label>
        </div>
        <div
          class="bp3-form-group multiTypeCheckbox"
          data-id="parallel-1"
          style="width: 300px;"
        >
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout--horizontal StyledProps--main"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                style="flex-grow: 1; width: 300px;"
              >
                <label
                  class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox input Checkbox--checked StyledProps--main"
                >
                  <input
                    checked=""
                    name="parallel"
                    type="checkbox"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  cd.pipelineSteps.serviceTab.multiServicesParallelDeployLabel
                </label>
                <span
                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                      data-testid="multi-type-button"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="fixed-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 9 9"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
              <span
                class="Tooltip--acenter tooltip"
                data-tooltip-id="deployServiceStepForm_parallel"
              />
            </div>
          </div>
        </div>
        <div
          class="cardsContainer"
          data-rbd-droppable-context-id="1"
          data-rbd-droppable-id="serviceDropper"
        >
          <div
            data-rbd-draggable-context-id="1"
            data-rbd-draggable-id="svc_3"
          >
            <div
              class="bp3-card bp3-elevation-0 Card--card card marginBottom"
            >
              <div
                class="row"
              >
                <div
                  class="Layout--horizontal StyledProps--main serviceMetadata StyledProps--margin-right-xlarge"
                >
                  <div
                    class="serviceNameIconWrapper"
                  >
                    <span
                      class="serviceIcon"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="service-kubernetes"
                      >
                        <svg
                          height="24"
                          viewBox="0 0 14 14"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M7 .4c-.1 0-.2 0-.3.1L2 2.7c-.2.1-.4.3-.5.6l-1.2 5c-.1.2 0 .5.1.7l.1.1 3.2 4c.2.2.4.3.7.3h5.2c.3 0 .5-.1.7-.3l3.2-4c.2-.2.2-.5.2-.7l-1.2-5c-.1-.3-.2-.5-.5-.6L7.3.6c0-.1-.2-.2-.3-.2z"
                            fill="#326ce5"
                          />
                          <path
                            d="M7 2.1c-.2 0-.3.1-.3.3v.9c0 .1-.1.1-.1.1v.1c-.2 0-.3 0-.5.1-.7.2-1.4.5-1.8 1l-.1-.1H4c-.1-.1-.2-.2-.4-.3L3.4 4h-.1c-.1 0-.1-.1-.2-.1s-.2 0-.2.1c-.1.1-.1.3.1.4h.1c.1.1.2.1.2.1.2.1.3.2.4.3 0 0 .1.1.1.2l.1.1c-.5.7-.7 1.6-.6 2.5h-.1l-.1.1c-.1 0-.3.1-.5.1h-.4c-.2 0-.3.2-.2.3 0 .1.2.2.4.2h.1c.1 0 .2-.1.3-.1.2-.1.3-.1.5-.1.1 0 .1 0 .2.1h.1c.3.9.9 1.6 1.6 2l-.1.1v.2c-.1.1-.1.3-.3.5-.1.1-.1.1-.1.2v.1c-.1.2 0 .3.1.4s.3 0 .4-.2v-.1c0-.1.1-.2.1-.3.1-.2.1-.4.2-.5 0 0 .1 0 .1-.1l.1-.1c.6.2 1.4.3 2.1.2.2 0 .3-.1.5-.1l.1.1s.1 0 .1.1c.1.1.1.3.2.5 0 .1 0 .2.1.3v.1c.1.2.2.2.4.2.1-.1.2-.2.1-.4v-.1c0-.1-.1-.1-.1-.2-.1-.2-.2-.3-.2-.4V10.4c.8-.5 1.3-1.2 1.6-2h.1s.1-.1.2-.1.3.1.5.1c.1 0 .2.1.3.1h.1c.2 0 .3-.1.4-.2 0-.1-.1-.3-.2-.3h-.4c-.2 0-.4 0-.5-.1-.1 0-.1-.1-.1-.1h-.1c.1-.4 0-.9-.1-1.3s-.3-.9-.5-1.2l.1-.1c0-.1 0-.1.1-.2s.2-.2.4-.3c.1 0 .2-.1.2-.1h.1c.1-.1.2-.3.1-.4s-.3-.1-.4 0h-.1l-.2.2c-.1.1-.3.3-.4.3H10l-.1.1c-.6-.6-1.4-1-2.3-1.1v-.1l-.1-.1V3v-.4c-.2-.3-.3-.5-.5-.5zm-.3 2.2l-.1 1.5c0 .1-.1.2-.2.2h-.1l-1.2-.9c.4-.4.8-.6 1.4-.8zm.7 0c.6.1 1.2.4 1.7.8l-1.2.8c-.1.1-.3.1-.3 0l-.1-.1zM4.6 5.7l1.1 1c.1.1.1.2 0 .3l-.1.1-1.4.4c-.1-.7 0-1.3.4-1.8zm4.9 0c.2.3.3.6.4.9s.1.6.1.9l-1.4-.4c-.1 0-.2-.2-.2-.3s0-.1.1-.1zm-2.7 1h.4l.3.3-.1.4-.4.2-.4-.2-.1-.4zm1.4 1.2c.1 0 .1 0 0 0l1.5.2c-.2.6-.6 1.1-1.2 1.5l-.6-1.4c.1-.1.1-.2.3-.3zm-2.4 0c.1 0 .2.1.2.2v.2l-.6 1.4c-.5-.3-.9-.8-1.2-1.5zm1.2.6l.2.1.7 1.3c-.1 0-.2.1-.3.1-.5.1-1.1.1-1.6-.1l.7-1.3c.2 0 .2-.1.3-.1z"
                            fill="#fff"
                            stroke="#fff"
                            stroke-width="0.25"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      class="serviceNameWrapper"
                    >
                      <a
                        href="/account/undefined/services/svc_3"
                        target="_blank"
                      >
                        <p
                          class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-primary7 StyledProps--font-normal"
                          style="--text-line-clamp: 1;"
                        >
                          Service 3
                        </p>
                      </a>
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--font-small"
                      >
                        idLabel
                      </p>
                    </span>
                  </div>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <button
                    aria-label="editService"
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                    data-testid="edit-service-svc_3"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="Edit"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                        <path
                          clip-rule="evenodd"
                          d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                          fill="currentColor"
                          fill-rule="evenodd"
                          opacity="0.3"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    aria-label="common.deleteService"
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                    data-testid="delete-service-svc_3"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="main-trash"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 16 20"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M1.143 8.48a1.2 1.2 0 011.189-1.36h10.649a1.2 1.2 0 011.194 1.321l-1.039 10.208a1.2 1.2 0 01-1.193 1.079H3.716a1.2 1.2 0 01-1.189-1.04L1.143 8.48zm11.837-.16H2.332l1.385 10.207h8.226L12.98 8.32zM5.916 1.594a.6.6 0 01.719-.452l4.224.965a.6.6 0 01.452.719L11 4.179l3.86.882a.6.6 0 01-.267 1.17L1.535 3.248a.6.6 0 11.267-1.17l3.805.87.309-1.354zm.86 1.62l3.056.698.175-.768-3.055-.698-.175.768z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                        <path
                          clip-rule="evenodd"
                          d="M8 10.808a.5.5 0 01.5.5v5a.5.5 0 01-1 0v-5a.5.5 0 01.5-.5zm-2.761.012a.5.5 0 01.541.454l.436 4.981a.5.5 0 11-.996.087l-.436-4.98a.5.5 0 01.455-.542zM10.762 10.82a.5.5 0 01.455.541l-.436 4.981a.5.5 0 11-.996-.087l.435-4.98a.5.5 0 01.542-.455z"
                          fill="currentColor"
                          fill-rule="evenodd"
                          opacity="0.3"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            data-rbd-draggable-context-id="1"
            data-rbd-draggable-id="svc_1"
          >
            <div
              class="bp3-card bp3-elevation-0 Card--card card marginBottom"
            >
              <div
                class="row"
              >
                <div
                  class="Layout--horizontal StyledProps--main serviceMetadata StyledProps--margin-right-xlarge"
                >
                  <div
                    class="serviceNameIconWrapper"
                  >
                    <span
                      class="serviceIcon"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="service-kubernetes"
                      >
                        <svg
                          height="24"
                          viewBox="0 0 14 14"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M7 .4c-.1 0-.2 0-.3.1L2 2.7c-.2.1-.4.3-.5.6l-1.2 5c-.1.2 0 .5.1.7l.1.1 3.2 4c.2.2.4.3.7.3h5.2c.3 0 .5-.1.7-.3l3.2-4c.2-.2.2-.5.2-.7l-1.2-5c-.1-.3-.2-.5-.5-.6L7.3.6c0-.1-.2-.2-.3-.2z"
                            fill="#326ce5"
                          />
                          <path
                            d="M7 2.1c-.2 0-.3.1-.3.3v.9c0 .1-.1.1-.1.1v.1c-.2 0-.3 0-.5.1-.7.2-1.4.5-1.8 1l-.1-.1H4c-.1-.1-.2-.2-.4-.3L3.4 4h-.1c-.1 0-.1-.1-.2-.1s-.2 0-.2.1c-.1.1-.1.3.1.4h.1c.1.1.2.1.2.1.2.1.3.2.4.3 0 0 .1.1.1.2l.1.1c-.5.7-.7 1.6-.6 2.5h-.1l-.1.1c-.1 0-.3.1-.5.1h-.4c-.2 0-.3.2-.2.3 0 .1.2.2.4.2h.1c.1 0 .2-.1.3-.1.2-.1.3-.1.5-.1.1 0 .1 0 .2.1h.1c.3.9.9 1.6 1.6 2l-.1.1v.2c-.1.1-.1.3-.3.5-.1.1-.1.1-.1.2v.1c-.1.2 0 .3.1.4s.3 0 .4-.2v-.1c0-.1.1-.2.1-.3.1-.2.1-.4.2-.5 0 0 .1 0 .1-.1l.1-.1c.6.2 1.4.3 2.1.2.2 0 .3-.1.5-.1l.1.1s.1 0 .1.1c.1.1.1.3.2.5 0 .1 0 .2.1.3v.1c.1.2.2.2.4.2.1-.1.2-.2.1-.4v-.1c0-.1-.1-.1-.1-.2-.1-.2-.2-.3-.2-.4V10.4c.8-.5 1.3-1.2 1.6-2h.1s.1-.1.2-.1.3.1.5.1c.1 0 .2.1.3.1h.1c.2 0 .3-.1.4-.2 0-.1-.1-.3-.2-.3h-.4c-.2 0-.4 0-.5-.1-.1 0-.1-.1-.1-.1h-.1c.1-.4 0-.9-.1-1.3s-.3-.9-.5-1.2l.1-.1c0-.1 0-.1.1-.2s.2-.2.4-.3c.1 0 .2-.1.2-.1h.1c.1-.1.2-.3.1-.4s-.3-.1-.4 0h-.1l-.2.2c-.1.1-.3.3-.4.3H10l-.1.1c-.6-.6-1.4-1-2.3-1.1v-.1l-.1-.1V3v-.4c-.2-.3-.3-.5-.5-.5zm-.3 2.2l-.1 1.5c0 .1-.1.2-.2.2h-.1l-1.2-.9c.4-.4.8-.6 1.4-.8zm.7 0c.6.1 1.2.4 1.7.8l-1.2.8c-.1.1-.3.1-.3 0l-.1-.1zM4.6 5.7l1.1 1c.1.1.1.2 0 .3l-.1.1-1.4.4c-.1-.7 0-1.3.4-1.8zm4.9 0c.2.3.3.6.4.9s.1.6.1.9l-1.4-.4c-.1 0-.2-.2-.2-.3s0-.1.1-.1zm-2.7 1h.4l.3.3-.1.4-.4.2-.4-.2-.1-.4zm1.4 1.2c.1 0 .1 0 0 0l1.5.2c-.2.6-.6 1.1-1.2 1.5l-.6-1.4c.1-.1.1-.2.3-.3zm-2.4 0c.1 0 .2.1.2.2v.2l-.6 1.4c-.5-.3-.9-.8-1.2-1.5zm1.2.6l.2.1.7 1.3c-.1 0-.2.1-.3.1-.5.1-1.1.1-1.6-.1l.7-1.3c.2 0 .2-.1.3-.1z"
                            fill="#fff"
                            stroke="#fff"
                            stroke-width="0.25"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      class="serviceNameWrapper"
                    >
                      <a
                        href="/account/undefined/services/svc_1"
                        target="_blank"
                      >
                        <p
                          class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-primary7 StyledProps--font-normal"
                          style="--text-line-clamp: 1;"
                        >
                          Service 1
                        </p>
                      </a>
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--font-small"
                      >
                        idLabel
                      </p>
                    </span>
                  </div>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <button
                    aria-label="editService"
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                    data-testid="edit-service-svc_1"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="Edit"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                        <path
                          clip-rule="evenodd"
                          d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                          fill="currentColor"
                          fill-rule="evenodd"
                          opacity="0.3"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    aria-label="common.deleteService"
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                    data-testid="delete-service-svc_1"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="main-trash"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 16 20"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M1.143 8.48a1.2 1.2 0 011.189-1.36h10.649a1.2 1.2 0 011.194 1.321l-1.039 10.208a1.2 1.2 0 01-1.193 1.079H3.716a1.2 1.2 0 01-1.189-1.04L1.143 8.48zm11.837-.16H2.332l1.385 10.207h8.226L12.98 8.32zM5.916 1.594a.6.6 0 01.719-.452l4.224.965a.6.6 0 01.452.719L11 4.179l3.86.882a.6.6 0 01-.267 1.17L1.535 3.248a.6.6 0 11.267-1.17l3.805.87.309-1.354zm.86 1.62l3.056.698.175-.768-3.055-.698-.175.768z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                        <path
                          clip-rule="evenodd"
                          d="M8 10.808a.5.5 0 01.5.5v5a.5.5 0 01-1 0v-5a.5.5 0 01.5-.5zm-2.761.012a.5.5 0 01.541.454l.436 4.981a.5.5 0 11-.996.087l-.436-4.98a.5.5 0 01.455-.542zM10.762 10.82a.5.5 0 01.455.541l-.436 4.981a.5.5 0 11-.996-.087l.435-4.98a.5.5 0 01.542-.455z"
                          fill="currentColor"
                          fill-rule="evenodd"
                          opacity="0.3"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="toggleWrapper"
              >
                <button
                  aria-label="cd.pipelineSteps.serviceTab.viewServiceInputs"
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-link Button--size Button--small"
                  data-testid="toggle-service-inputs"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-right-xsmall"
                    icon="chevron-down"
                  >
                    <svg
                      data-icon="chevron-down"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-down
                      </desc>
                      <path
                        d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    cd.pipelineSteps.serviceTab.viewServiceInputs
                  </span>
                </button>
              </div>
              <div
                class="bp3-collapse"
              >
                <div
                  aria-hidden="false"
                  class="bp3-collapse-body"
                  style="transform: translateY(-undefinedpx);"
                />
              </div>
            </div>
          </div>
          <div
            data-rbd-draggable-context-id="1"
            data-rbd-draggable-id="svc_2"
          >
            <div
              class="bp3-card bp3-elevation-0 Card--card card"
            >
              <div
                class="row"
              >
                <div
                  class="Layout--horizontal StyledProps--main serviceMetadata StyledProps--margin-right-xlarge"
                >
                  <div
                    class="serviceNameIconWrapper"
                  >
                    <span
                      class="serviceIcon"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="service-kubernetes"
                      >
                        <svg
                          height="24"
                          viewBox="0 0 14 14"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M7 .4c-.1 0-.2 0-.3.1L2 2.7c-.2.1-.4.3-.5.6l-1.2 5c-.1.2 0 .5.1.7l.1.1 3.2 4c.2.2.4.3.7.3h5.2c.3 0 .5-.1.7-.3l3.2-4c.2-.2.2-.5.2-.7l-1.2-5c-.1-.3-.2-.5-.5-.6L7.3.6c0-.1-.2-.2-.3-.2z"
                            fill="#326ce5"
                          />
                          <path
                            d="M7 2.1c-.2 0-.3.1-.3.3v.9c0 .1-.1.1-.1.1v.1c-.2 0-.3 0-.5.1-.7.2-1.4.5-1.8 1l-.1-.1H4c-.1-.1-.2-.2-.4-.3L3.4 4h-.1c-.1 0-.1-.1-.2-.1s-.2 0-.2.1c-.1.1-.1.3.1.4h.1c.1.1.2.1.2.1.2.1.3.2.4.3 0 0 .1.1.1.2l.1.1c-.5.7-.7 1.6-.6 2.5h-.1l-.1.1c-.1 0-.3.1-.5.1h-.4c-.2 0-.3.2-.2.3 0 .1.2.2.4.2h.1c.1 0 .2-.1.3-.1.2-.1.3-.1.5-.1.1 0 .1 0 .2.1h.1c.3.9.9 1.6 1.6 2l-.1.1v.2c-.1.1-.1.3-.3.5-.1.1-.1.1-.1.2v.1c-.1.2 0 .3.1.4s.3 0 .4-.2v-.1c0-.1.1-.2.1-.3.1-.2.1-.4.2-.5 0 0 .1 0 .1-.1l.1-.1c.6.2 1.4.3 2.1.2.2 0 .3-.1.5-.1l.1.1s.1 0 .1.1c.1.1.1.3.2.5 0 .1 0 .2.1.3v.1c.1.2.2.2.4.2.1-.1.2-.2.1-.4v-.1c0-.1-.1-.1-.1-.2-.1-.2-.2-.3-.2-.4V10.4c.8-.5 1.3-1.2 1.6-2h.1s.1-.1.2-.1.3.1.5.1c.1 0 .2.1.3.1h.1c.2 0 .3-.1.4-.2 0-.1-.1-.3-.2-.3h-.4c-.2 0-.4 0-.5-.1-.1 0-.1-.1-.1-.1h-.1c.1-.4 0-.9-.1-1.3s-.3-.9-.5-1.2l.1-.1c0-.1 0-.1.1-.2s.2-.2.4-.3c.1 0 .2-.1.2-.1h.1c.1-.1.2-.3.1-.4s-.3-.1-.4 0h-.1l-.2.2c-.1.1-.3.3-.4.3H10l-.1.1c-.6-.6-1.4-1-2.3-1.1v-.1l-.1-.1V3v-.4c-.2-.3-.3-.5-.5-.5zm-.3 2.2l-.1 1.5c0 .1-.1.2-.2.2h-.1l-1.2-.9c.4-.4.8-.6 1.4-.8zm.7 0c.6.1 1.2.4 1.7.8l-1.2.8c-.1.1-.3.1-.3 0l-.1-.1zM4.6 5.7l1.1 1c.1.1.1.2 0 .3l-.1.1-1.4.4c-.1-.7 0-1.3.4-1.8zm4.9 0c.2.3.3.6.4.9s.1.6.1.9l-1.4-.4c-.1 0-.2-.2-.2-.3s0-.1.1-.1zm-2.7 1h.4l.3.3-.1.4-.4.2-.4-.2-.1-.4zm1.4 1.2c.1 0 .1 0 0 0l1.5.2c-.2.6-.6 1.1-1.2 1.5l-.6-1.4c.1-.1.1-.2.3-.3zm-2.4 0c.1 0 .2.1.2.2v.2l-.6 1.4c-.5-.3-.9-.8-1.2-1.5zm1.2.6l.2.1.7 1.3c-.1 0-.2.1-.3.1-.5.1-1.1.1-1.6-.1l.7-1.3c.2 0 .2-.1.3-.1z"
                            fill="#fff"
                            stroke="#fff"
                            stroke-width="0.25"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      class="serviceNameWrapper"
                    >
                      <a
                        href="/account/undefined/services/svc_2"
                        target="_blank"
                      >
                        <p
                          class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-primary7 StyledProps--font-normal"
                          style="--text-line-clamp: 1;"
                        >
                          Service 2
                        </p>
                      </a>
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--font-small"
                      >
                        idLabel
                      </p>
                    </span>
                  </div>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <button
                    aria-label="editService"
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                    data-testid="edit-service-svc_2"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="Edit"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                        <path
                          clip-rule="evenodd"
                          d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                          fill="currentColor"
                          fill-rule="evenodd"
                          opacity="0.3"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    aria-label="common.deleteService"
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                    data-testid="delete-service-svc_2"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="main-trash"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 16 20"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M1.143 8.48a1.2 1.2 0 011.189-1.36h10.649a1.2 1.2 0 011.194 1.321l-1.039 10.208a1.2 1.2 0 01-1.193 1.079H3.716a1.2 1.2 0 01-1.189-1.04L1.143 8.48zm11.837-.16H2.332l1.385 10.207h8.226L12.98 8.32zM5.916 1.594a.6.6 0 01.719-.452l4.224.965a.6.6 0 01.452.719L11 4.179l3.86.882a.6.6 0 01-.267 1.17L1.535 3.248a.6.6 0 11.267-1.17l3.805.87.309-1.354zm.86 1.62l3.056.698.175-.768-3.055-.698-.175.768z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                        <path
                          clip-rule="evenodd"
                          d="M8 10.808a.5.5 0 01.5.5v5a.5.5 0 01-1 0v-5a.5.5 0 01.5-.5zm-2.761.012a.5.5 0 01.541.454l.436 4.981a.5.5 0 11-.996.087l-.436-4.98a.5.5 0 01.455-.542zM10.762 10.82a.5.5 0 01.455.541l-.436 4.981a.5.5 0 11-.996-.087l.435-4.98a.5.5 0 01.542-.455z"
                          fill="currentColor"
                          fill-rule="evenodd"
                          opacity="0.3"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`DeployServiceEntityWidget - multi services tests user can select multiple services 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main formRow StyledProps--margin-bottom-medium StyledProps--flex StyledProps--flex-alignItems-flex-start StyledProps--flex-justifyContent-space-between"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-flex-start StyledProps--flex-justifyContent-flex-start"
          >
            <div
              class="inputFieldLayout"
            >
              <div
                class="serviceLabel"
              >
                <div
                  class="StyledProps--font StyledProps--main"
                  data-testid="serviceTooltip"
                >
                  <span
                    class="Tooltip--acenter bp3-label"
                    data-tooltip-id="deployServiceStepForm_service"
                  >
                    cd.pipelineSteps.serviceTab.specifyYourService
                  </span>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="undefined-0"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                      style="width: 300px;"
                    >
                      <button
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
                        data-testid="cr-field-service"
                        style="width: 300px;"
                        type="button"
                      >
                        <span
                          class="bp3-button-text"
                        >
                          <span
                            class="placeholder"
                          >
                            cd.pipelineSteps.serviceTab.selectService
                          </span>
                        </span>
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                      <span
                        class="bp3-popover-wrapper MultiTypeInput--wrapper"
                      >
                        <span
                          class="bp3-popover-target"
                        >
                          <button
                            class="MultiTypeInput--btn MultiTypeInput--FIXED"
                            data-testid="multi-type-button"
                          >
                            <span
                              class="bp3-icon StyledProps--main"
                              data-icon="fixed-input"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 9 9"
                                width="12"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                  fill="currentColor"
                                />
                              </svg>
                            </span>
                          </button>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <button
              aria-label="cd.addService"
              class="bp3-button Button--button StyledProps--font StyledProps--main serviceActionWrapper Button--with-current-color Button--withLeftIcon Button--variation Button--variation-link Button--size Button--small"
              data-testid="add-new-service"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
                icon="plus"
              >
                <svg
                  data-icon="plus"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    plus
                  </desc>
                  <path
                    d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp3-button-text"
              >
                cd.addService
              </span>
            </button>
          </div>
          <label
            class="Toggle--toggle serviceActionWrapper StyledProps--main"
            data-tooltip-id="multiServiceToggle"
          >
            <input
              class="Toggle--input"
              type="checkbox"
              value=""
            />
            <span
              class="Toggle--toggleIcon"
            />
            cd.pipelineSteps.serviceTab.multiServicesText
          </label>
        </div>
        <div
          class="cardsContainer"
          data-rbd-droppable-context-id="0"
          data-rbd-droppable-id="serviceDropper"
        />
      </div>
    </form>
  </div>
</div>
`;
